# Xdl

./: .env.example  .gitignore  DESIGN.md  IMPROVEMENTS.md  README.md  pyproject.toml
docs/: API_LIMITS.md
scripts/: bootstrap_install.sh  install_linux_service.sh
src/xdl_relay/: __init__.py  __main__.py  config.py  db.py  enhancements.py  http_utils.py  models.py  service.py  storage.py  telegram_client.py  webui.py  x_auth.py  x_client.py
tests/: test_config.py  test_db.py  test_enhancements.py  test_service.py  test_storage.py  test_webui_settings.py  test_x_pagination.py  test_x_parsing.py
